hphp/test/slow/hhbbc/magic_call_006.php.expectf
a

Fatal error: Call to protected Asd::heh() from invalid context in %s/slow/hhbbc/magic_call_006.php on line 18
